--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -23,6 +23,7 @@
     </div>
     <a href="/login">Login/Signup</a>
     <a href="/cart">Cart</a>
+    <a href="/logout">Log Out</a>
   </div>
 </body>
 </html>
