--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,19 +27,21 @@
   </div>
   <ul>
     <% products.forEach(product => { %>
-      <li>
-        <h2><%= product.DeviceName %></h2>
-        <p>Manufacturer: <%= product.DeviceManufacturer %></p>
-        <p>Price: $<%= product.DevicePrice %></p>
-        <p>Description: <%= product.DeviceDescription %></p>
-        <p>Category: <%= product.DeviceCategory %></p>
-        <p>Quantity: <%= product.DeviceStock %></p>
-        <form action="/addToCart" method="post">
-          <input type="hidden" name="productId" value="<%= product._id %>">
-          <input type="number" name="quantity" value="1" min="1">
-          <button type="submit">Add to Cart</button>
-        </form>
-      </li>
+      <% if (product.DeviceStock > 0) { %>
+        <li>
+          <h2><%= product.DeviceName %></h2>
+          <p>Manufacturer: <%= product.DeviceManufacturer %></p>
+          <p>Price: $<%= product.DevicePrice %></p>
+          <p>Description: <%= product.DeviceDescription %></p>
+          <p>Category: <%= product.DeviceCategory %></p>
+          <p>Quantity: <%= product.DeviceStock %></p>
+          <form action="/addToCart" method="post">
+            <input type="hidden" name="productId" value="<%= product._id %>">
+            <input type="number" name="quantity" value="1" min="1">
+            <button type="submit">Add to Cart</button>
+          </form>
+        </li>
+      <% } %>
     <% }) %>
   </ul>
   <!-- JS Scripts-->
