--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -11,8 +11,6 @@
     <!-- Libraries -->
 </head>
 <body>
-    <h1>Welcome <%= username %></h1>
-
   <div class="navbar">
     <a href="/index">Home Page</a>
     <div class="search-container">
@@ -25,5 +23,25 @@
     <a href="/cart">Cart</a>
     <a href="/logout">Log Out</a>
   </div>
+  <h1>Welcome <%= user.username %></h1>
+
+  <h2>Email: <%= user.email %></h2>
+  <h2>Phone: <%= user.phone %></h2>
+  <h2>User Type: <%= user.type %></h2>
+  <h2>Delivery Address: <%= user.deliveryAddress %></h2>
+
+  <h2>Order History:</h2>
+  <ul>
+      <% user.orderHistory.forEach(order => { %>
+          <li>Order ID: <%= order.orderId %> - Date: <%= order.date %> - Total: $<%= order.total %></li>
+      <% }) %>
+  </ul>
+
+  <h2>Activity Log:</h2>
+  <ul>
+      <% user.activityLog.forEach(activity => { %>
+          <li><%= activity %></li>
+      <% }) %>
+  </ul>
 </body>
 </html>
