--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,6 +24,7 @@
     </div>
     <a href="/login">Login/Signup</a>
     <a href="/cart">Cart</a>
+    <a href="/dashboard">dashboard</a>
   </div>
   <ul>
     <% products.forEach(product => { %>
