--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,5 +24,6 @@
         <input type="password" name="password" placeholder="Password" required>
         <button type="submit">Login</button>
     </form>
+    <a href="/registration">registration</a>
 </body>
 </html>
