--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,30 +12,54 @@
     <!-- Libraries -->
 
 </head>
-<body>
-  <h1>Welcome to IoT Bay</h1>
+<header>
+  <h1><a href="/index">Welcome to IoT Bay</a></h1>
   <div class="navbar">
-    <a href="/index">Home Page</a>
+    <a href="/index">
+      Home
+    </a>
     <div class="search-container">
       <form action="/search" method="get">
         <input type="text" placeholder="Search..." name="search">
-        <button type="submit">Search</button>
+        <button type="submit">
+          <svg xmlns="http://www.w3.org/2000/svg" style="width: 30px; height: 30px" viewBox="0 0 512 512">
+            <path d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6 .1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"/>
+          </svg>
+        </button>
       </form>
     </div>
-    <a href="/login">Login/Signup</a>
-    <a href="/cart">Cart</a>
-    <a href="/dashboard">dashboard</a>
+    <% if (!user) { %>
+      <a href="/login">
+        Login
+      </a>
+    <% } else { %>
+      <a href="/logout">
+        Logout
+      </a>
+    <% } %>
+    <a href="/cart">
+    <svg xmlns="http://www.w3.org/2000/svg" style="width: 50px; height: 50px" viewBox="0 0 576 512">
+      <path d="M528.1 301.3l47.3-208C578.8 78.3 567.4 64 552 64H159.2l-9.2-44.8C147.8 8 137.9 0 126.5 0H24C10.7 0 0 10.7 0 24v16c0 13.3 10.7 24 24 24h69.9l70.2 343.4C147.3 417.1 136 435.2 136 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-15.7-6.4-29.8-16.8-40h209.6C430.4 426.2 424 440.3 424 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-22.2-12.9-41.3-31.6-50.4l5.5-24.3c3.4-15-8-29.3-23.4-29.3H218.1l-6.5-32h293.1c11.2 0 20.9-7.8 23.4-18.7z"/>
+    </svg>
+    </a>
+    <% if (user) { %>
+      <a href="/dashboard">
+        Dashboard
+      </a>
+    <% } %>
   </div>
-  <ul>
+</header>
+<body>
+  <ul class="product-form">
     <% products.forEach(product => { %>
       <% if (product.DeviceStock > 0) { %>
-        <li>
-          <h2><%= product.DeviceName %></h2>
-          <p>Manufacturer: <%= product.DeviceManufacturer %></p>
-          <p>Price: $<%= product.DevicePrice %></p>
-          <p>Description: <%= product.DeviceDescription %></p>
-          <p>Category: <%= product.DeviceCategory %></p>
-          <p>Quantity: <%= product.DeviceStock %></p>
+        <li class="product-item">
+          <h2 class="product-name"><%= product.DeviceName %></h2>
+          <p class="product-details">Manufacturer: <%= product.DeviceManufacturer %></p>
+          <p class="product-details" style="font-weight: bold;">Price: $<%= product.DevicePrice %></p>
+          <p class="product-details">Description: <%= product.DeviceDescription %></p>
+          <p class="product-details">Category: <%= product.DeviceCategory %></p>
+          <p class="product-details">Stock Left: <%= product.DeviceStock %></p>
           <form action="/addToCart" method="post">
             <input type="hidden" name="productId" value="<%= product._id %>">
             <input type="number" name="quantity" value="1" min="1">
@@ -46,6 +70,5 @@
     <% }) %>
   </ul>
   <!-- JS Scripts-->
-  <script src="/js/login.js"></script>
 </body>
 </html>
