--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,19 +1,15 @@
-<!-- views/index.ejs -->
+<!-- views/search.ejs -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
-
+    <title>Search Results</title>
     <!-- Local Files -->
     <link rel="stylesheet" href="css/styles.css" type="text/css">
-
-    <!-- Libraries -->
-
 </head>
 <header>
-  <h1><a href="/index">Welcome to IoT Bay</a></h1>
+  <h1><a href="/index">Search Results</a></h1>
   <div class="navbar">
     <a href="/index">
       Home
@@ -50,25 +46,24 @@
   </div>
 </header>
 <body>
-  <ul class="product-form">
-    <% products.forEach(product => { %>
-      <% if (product.DeviceStock > 0) { %>
-        <li class="product-item">
-          <h2 class="product-name"><%= product.DeviceName %></h2>
-          <p class="product-details">Manufacturer: <%= product.DeviceManufacturer %></p>
-          <p class="product-details" style="font-weight: bold;">Price: $<%= product.DevicePrice %></p>
-          <p class="product-details">Description: <%= product.DeviceDescription %></p>
-          <p class="product-details">Category: <%= product.DeviceCategory %></p>
-          <p class="product-details">Stock Left: <%= product.DeviceStock %></p>
-          <form action="/addToCart" method="post">
-            <input type="hidden" name="productId" value="<%= product._id %>">
-            <input type="number" name="quantity" value="1" min="1">
-            <button type="submit">Add to Cart</button>
-          </form>
-        </li>
-      <% } %>
+  <ul>
+    <% searchResults.forEach(product => { %>
+      <li>
+        <h2><%= product.DeviceName %></h2>
+        <p>Manufacturer: <%= product.DeviceManufacturer %></p>
+        <p>Price: $<%= product.DevicePrice %></p>
+        <p>Description: <%= product.DeviceDescription %></p>
+        <p>Category: <%= product.DeviceCategory %></p>
+        <p>Quantity: <%= product.DeviceStock %></p>
+        <form action="/addToCart" method="post">
+          <input type="hidden" name="productId" value="<%= product._id %>">
+          <input type="number" name="quantity" value="1" min="1">
+          <button type="submit">Add to Cart</button>
+        </form>
+      </li>
     <% }) %>
   </ul>
   <!-- JS Scripts-->
+  <script src="/js/login.js"></script>
 </body>
 </html>
